tests/pass/use_array_push_pop_basic.lum
use array
use io
nums = [1, 2]
push(nums, 3)
println(nums)
println(pop(nums))
println(nums)
