tests/fail/array_set_negative_index.lum
nums = [1, 2, 3]
nums[-1] = 5
